--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
     "sdk"
   ],
   "main": "src/index.js",
+  "types": "types/index.d.ts",
   "browser": {
     "secp256k1": "secp256k1/elliptic",
     "./src/index.js": "./dist/js-conflux-sdk.umd.min.js"
@@ -37,6 +38,7 @@
     "@babel/plugin-transform-runtime": "^7.8.3",
     "@babel/preset-env": "^7.8.4",
     "@geekberry/jsdoc-to-md": "^0.0.3",
+    "@types/node": "^14.0.13",
     "babel-plugin-lodash": "^3.3.4",
     "babelify": "^10.0.0",
     "browserify": "^16.5.0",
